--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 * {
   margin: 0;
@@ -10,9 +10,9 @@
 
 :root {
   /* COLORS */
-  --BGCOLOR: #0f172a;
-  --BORDER-COLOR: #fff;
-  --COLOR: #fff;
+  --BGCOLOR: #0F172A;
+  --BORDER-COLOR: #FFF;
+  --COLOR: #FFF;
   --ERROR: firebrick;
   --INACTIVE: lightgray;
   --LINK-COLOR: whitesmoke;
@@ -20,7 +20,7 @@
   --NOTE-BGCOLOR: hsla(240, 64%, 27%, 0.65);
   --STATUS-COMPLETE: limegreen;
   --STATUS-OPEN: firebrick;
-  --TABLE-BGCOLOR: #fff;
+  --TABLE-BGCOLOR: #FFF;
   --TABLE-COLOR: #000;
 }
 
@@ -60,11 +60,11 @@
 /* || GENERAL STYLES */
 
 body {
-  font-family: "Nunito", sans-serif;
+  font-family: 'Nunito', sans-serif;
   min-height: 100vh;
   background-color: var(--BGCOLOR);
   color: var(--COLOR);
-  background-image: url("./img/background.jpg");
+  background-image: url('./img/background.jpg');
   background-size: cover;
   background-position: top right;
   background-blend-mode: multiply;
@@ -125,7 +125,7 @@ a:focus-visible {
 }
 
 .welcome a::before {
-  content: "➜ ";
+  content: "➜ "
 }
 
 /* || DASH HEADER, CONTAINER & FOOTER */
@@ -177,6 +177,7 @@ a:focus-visible {
   width: auto;
   height: auto;
 }
+
 
 /* || TABLES - GENERAL */
 
@@ -244,6 +245,7 @@ tr {
   color: var(--STATUS-COMPLETE);
 }
 
+
 /* || FORM - GENERAL */
 
 .form {
@@ -287,6 +289,7 @@ tr {
   border: 1px solid red;
   outline: 1px solid red;
 }
+
 
 .form__checkbox {
   width: 24px;
@@ -334,6 +337,7 @@ tr {
 }
 
 @media screen and (min-width: 768px) {
+
   body {
     font-size: 1.25rem;
   }
@@ -357,7 +361,7 @@ tr {
   .note__created,
   .note__updated,
   .note__username {
-    display: block;
+    display: block
   }
 
   .form__action-buttons {
